--- a/package.json
+++ b/package.json
@@ -41,5 +41,7 @@
 		"mocha": "^7.0.1",
 		"typescript": "^3.7.5",
 		"vscode-test": "^1.3.0"
-	}
+	},
+	"publisher": "toptensoftware",
+	"repository": "github:toptensoftware/vhdlwrangle"
 }
