--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "vhdlwrangle",
 	"displayName": "vhdlwrangle",
 	"description": "VHDL Text Wrangling Tools",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"engines": {
 		"vscode": "^1.41.0"
 	},
@@ -26,16 +26,25 @@
 				"title": "Convert VHDL Port Declarations to Signals"
 			}
 		],
-		"languages": [{
-			"id": "vhdl",
-			"extensions": [ ".vhdl", ".vhd" ],
-			"aliases": [ "VHDL"]
-		}],
-        "grammars": [{
-            "language": "vhdl",
-            "scopeName": "source.vhdl",
-            "path": "./vhdl.tmLanguage"
-        }],
+		"languages": [
+			{
+				"id": "vhdl",
+				"extensions": [
+					".vhdl",
+					".vhd"
+				],
+				"aliases": [
+					"VHDL"
+				]
+			}
+		],
+		"grammars": [
+			{
+				"language": "vhdl",
+				"scopeName": "source.vhdl",
+				"path": "./vhdl.tmLanguage"
+			}
+		]
 	},
 	"scripts": {
 		"lint": "eslint .",
