--- a/package.json
+++ b/package.json
@@ -62,6 +62,9 @@
 		"typescript": "^3.7.5",
 		"vscode-test": "^1.3.0"
 	},
+	"dependencies": {
+		"glob": "^7.1.6"
+	},
 	"publisher": "toptensoftware",
 	"repository": "github:toptensoftware/vhdlwrangle"
 }
